@@ -37,6 +37,7 @@ Version 1.5 (X/X/2011)
  Events and Notifications
   * Added a "Do Nothing" event. (#3590).
   * Added a "Message sent (Group chat)" event. (Will Bowling) (#12316)
+  * Added "Message received (Away)" and "Message received (Away Group Chat)" events. (#13278)
   * Added Regex support for mentions. (#12832)
 
  Get Info window
